--- a/sb-wed/package.json
+++ b/sb-wed/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.3",
+    "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   }
 }
